# pokedex

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  clients.py  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  repositories.py  schema.py  services.py  settings.py
migrations/: env.py
migrations/versions/: 20221201_9a589e04684b.py
tests/: test_services.py
