[project]
name = "pokemon"
version = "1.0.0"
description = ""
authors = []
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "requests==2.28.1",
    "alembic==1.8.1",
    "gunicorn==20.1.0",
    "Flask==2.2.2",
    "SQLAlchemy==1.4.44",
    "psycopg2-binary==2.9.5",
    "pydantic==1.10.2",
]
[project.optional-dependencies]
test = [
    "black==22.10.0",
    "mypy==0.982",
    "types-requests==2.28.11.5",
    "pytest==7.1.3",
    "pytest-cov==4.0.0",
]
[project.scripts]
tasker = "main:main"

[build-system]
requires = ["setuptools>=63.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'

[tool.mypy]
ignore_missing_imports = true
warn_no_return = false
warn_return_any = false
follow_imports = "skip"
strict_optional = true
exclude = ["^migrations/"]

[tool.coverage.run]
branch = true
omit = ["tests/*", "migrations/*"]
[tool.coverage.report]
skip_empty = true
